src/AdvRecordLog.scss
// IMPORTS
@import "./utils/common.scss";

// STYLES
.log {
    min-height: 100vh;

    @include flex(center, flex-start, column);

    & > div {
        width: 100%;
    }

    nav {
        z-index: 980;
    }

    & > .jumbotron {
        padding: 3rem 1rem;
        margin: 0;
    }

    & > .contentWrapper {
        display: block;
        width: 100%;
        padding: 3rem 0;

        flex-grow: 1;

        background: $color-background-white;

        @include flex(center, flex-start, column);
    }

    .titleBox {
        margin-top: 1rem;

        @include flex(center, flex-start, column);

        * {
            padding: 0;
            margin: 0;

            font-family: $fontFamily-fauxdesto;
            font-weight: normal;

            text-align: center;
        }

        h1 {
            font-size: 2.75rem;
        }

        h2 {
            margin: -.75rem auto 0;

            font-size: 2.25rem;
        }
    }

    .gameList {
        flex-grow: 1;

        @include flex(center, flex-end, column-reverse);
    }

    .newRecordWrapper {
        margin: 1rem 0;

        .newButton {
            font-size: 2rem;
            font-weight: 300;

            border-width: 2px;
            border-color: black;
            outline: none;
            background: white;
            box-shadow: none;

            @include transition();

            &.isOpen {
                color: $color-active-text;
                border-color: $color-active-background;
                border-bottom-color: transparent;
                border-bottom-right-radius: 0;
                border-bottom-left-radius: 0;
                background: $color-active-background;
            }

            &:hover,
            &:focus {
                color: white !important;
                border-color: black !important;
                background: black !important;
            }
        }
    }

    .addLogWrapper {
        display: grid;
        padding: 1rem;
        margin: 0 0 1rem;

        grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
        grid-gap: 1rem;
        grid-auto-rows: 1fr;

        list-style: none;

        @include container();

        li {
            flex-basis: 0;
            flex-grow: 1;

            @include flex();
        }

        .customItem {
            position: relative;

            width: 100%;
            height: 100%;

            box-sizing: border-box;

            border-width: 2px !important;
            border-color: lightgray;
            background: $color-background-white !important;

            &:hover,
            &:focus {
                cursor: pointer;

                border-color: black;
            }

            &.disabled {
                pointer-events: none;

                opacity: .4;
            }


            .card-body {
                @include flex(flex-start, flex-start, column);

                .card-title {
                    margin: 0 .75rem .5rem 0 !important;

                    font-weight: bold;
                }
            }
        }
    }

    .footer {
        margin: 0 !important;
    }

    .activeBarWrapper {
        position: fixed;

        width: 0;
        overflow-y: scroll;

        background: rgba(0,0,0,0);

        @include transition();;

        &:not(.openBar) {
            overflow: hidden;

            pointer-events: none;

            .toggle {
                border-radius: 0 0 50% 0;
                background: rgba(255,255,255,.85);

                &:hover,
                &:focus {
                    background: rgba(0,0,0,.85);

                    @include transition();

                    span:not(.number) {
                        color: white !important;
                    }
                }
            }
        }

        &.openBar {
            width: 325px;

            pointer-events: auto;

            background: rgba(0,0,0,.85);

            .toggle {
                span {
                    color: white !important;
                }
            }
        }

        .toggle {
            pointer-events: auto !important;
        }

        .toggle,
        .text {
            color: white !important;
        }

        .message {
            position: absolute;
            top: 0;
            left: 0;

            height: 100%;
            min-width: 240px;
            padding-left: 60px;

            font-size: 1.1rem;
            font-weight: lighter;

            @include flex(center, flex-start);
        }

        .badge {
            font-size: .8rem;

            text-decoration: none !important;

            color: transparent !important;
        }


        .title {
            font-size: 1.1rem;
            line-height: 3.1;
        }

        .eventItem,
        .eventInfo {
            &.expended {
                * {
                    text-decoration: line-through currentColor solid;

                    color: gray !important;

                    @include transition();
                }

                .title {
                    text-decoration: line-through currentColor solid;
                }

                .list {
                    border-left-color: darken(gray, 25%) !important;
                }
            }
        }

        .eventItem {
            margin-top: 3px;

            & + div > div {
                &:after,
                &:before {
                    display: none !important;
                }
            }
        }

        .eventInfo {
            padding: 0 1.5rem .5rem !important;
            margin: -.5rem 0 !important;

            cursor: auto !important;

            background-color: rgba(0, 0, 0, .25)
            !important;

            .code {
                font-weight: bold;

                @include flex(center,space-between);

                .custom-switch {
                    margin-bottom: -.2rem;
                    margin-left: .5rem;

                    .custom-control-label {
                        &:before,
                        &:after {
                            outline: none !important;
                            box-shadow: none !important;
                        }

                        &:before {
                            border-color: darkgray;
                            background-color: white;
                        }

                        &:after {
                            background-color: darkgray;
                        }
                    }
                    .custom-control-input:checked ~ .custom-control-label {
                        &:before {
                            border-color: gray;
                            background-color: darkgray;
                        }

                        &:after {
                            background-color: gray;
                        }
                    }
                }
            }

            .desc {
                line-height: 1rem;
            }

            .list {
                padding-left: .75rem;
                margin: -.5rem 0 1rem;

                box-sizing: border-box;

                border-left: 2px solid rgba(255, 255, 255, .5) !important;
            }
        }

        .toggle {
            span {
                color: black !important;
            }

            span:not(.number) {
                background-color: currentColor !important;
            }

            .number {
                position: absolute;
                top: .75rem;
                right: .5rem;
            }
        }
    }
}

// Extra small devices (portrait phones, less than 576px)
// No media query for `xs` since this is the default in Bootstrap

// Small devices (landscape phones, 576px and up)
@media (min-width:576px) {
    .log {
        .titleBox {
            h1 {
                font-size: 3rem;
            }

            h2 {
                font-size: 2.5rem;
            }
        }

        .addLogWrapper .customItem .card-body {
            @include flex(center, flex-start);
        }
    }
}

// Medium devices (tablets, 768px and up)
@media (min-width:768px) {
    .log {
        .titleBox {
            h1 {
                font-size: 4rem;
            }

            h2 {
                font-size: 3rem;
            }
        }

        .addLogWrapper .customItem .card-body {
            @include flex(flex-start, flex-start, column);
        }
    }
}

// Large devices (desktops, 992px and up)
@media (min-width:992px) {
    .log .titleBox {
        h1 {
            font-size: 5rem;
        }

        h2 {
            margin: -1rem auto 0;

            font-size: 4rem;
        }
    }
}

// Extra large devices (large desktops, 1200px and up)
@media (min-width:1200px) {
}

